tests/baselines/reference/privacyCheckAnonymousFunctionParameter.errors.txt
privacyCheckAnonymousFunctionParameter.ts(7,9): error TS2322: Type 'null' is not assignable to type 'Iterator<T>'.


==== privacyCheckAnonymousFunctionParameter.ts (1 errors) ====
    export var x = 1;  // Makes this an external module
    interface Iterator<T> {
    }
    
    namespace Query {
        export function fromDoWhile<T>(doWhile: (test: Iterator<T>) => boolean): Iterator<T> {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Iterator<T>'.
        }
    
        function fromOrderBy() {
            return fromDoWhile(test => {
                return true;
            });
        }
    }
    